feat: update hard-coded ../ references to support installation via app management

--- a/components/dashboard/dashboard.html
+++ b/components/dashboard/dashboard.html
@@ -122,7 +122,7 @@
 
 
     <div class="col-sm-12" ng-if="!metaDataCached">
-        <img src="../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/><br>
+        <img src="../../../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/><br>
             {{'loading_metadata'| translate}}
     </div>
 
