--- a/components/dataentry/dataentry-tabular-layout.html
+++ b/components/dataentry/dataentry-tabular-layout.html
@@ -35,7 +35,7 @@
                                 <div ng-if="currentEvent" class="long-vertical-spacing" ng-include="'components/dataentry/dataentry-notes.html'"></div>                                    
                             </div>
                             <div ng-if="!eventsLoaded">
-                                <img src="../images/ajax-loader-bar.gif" alt="{{'loading'| translate}}"/>
+                                <img src="../../../images/ajax-loader-bar.gif" alt="{{'loading'| translate}}"/>
                             </div>
                         </div>
                         <div style="width: 3%; float: left;" ng-hide="stagesNotShowingInStageTasks[currentStage.id] || !currentStage">
