--- a/components/report/upcoming-events.html
+++ b/components/report/upcoming-events.html
@@ -11,7 +11,7 @@
         </ul>
     </div>
     
-    <img id="ouwt_loader" src="../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/>
+    <img id="ouwt_loader" src="../../../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/>
     
     <div class="small-horizontal-spacing" ng-if="!treeLoaded">
         {{'loading_tree'| translate}}
@@ -160,7 +160,7 @@
     </form>    
     <!--input form ends -->
 
-    <img src="../images/ajax-loader-bar.gif" ng-if="reportStarted && !reportFinished"/>
+    <img src="../../../images/ajax-loader-bar.gif" ng-if="reportStarted && !reportFinished"/>
 
     <!-- upcoming events list begins -->
     <div ng-if="reportFinished">
