--- a/views/home.html
+++ b/views/home.html
@@ -29,7 +29,7 @@
         </ul>
     </div>
     
-    <img id="ouwt_loader" src="../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/>
+    <img id="ouwt_loader" src="../../../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/>
     
     <div class="small-horizontal-spacing" ng-if="!treeLoaded">
         {{'loading_tree'| translate}}
@@ -44,7 +44,7 @@
     <!--- selected org unit ends  -->
         
     <div ng-if="treeLoaded && !selectedOrgUnit" class="row col-sm-12">
-        <img src="../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/><br>
+        <img src="../../../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/><br>
         {{'loading_metadata'| translate}}
     </div> 
 
