--- a/components/home/home.html
+++ b/components/home/home.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
     
-    <img id="ouwt_loader" src="../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/>
+    <img id="ouwt_loader" src="../../../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/>
     
     <div class="small-horizontal-spacing" ng-if="!treeLoaded">
         {{'loading_tree'| translate}}
@@ -34,7 +34,7 @@
     <!--- selected org unit ends  -->
         
     <div ng-if="treeLoaded && !selectedOrgUnit && !loadFailed" id="loadingMetadata" class="row col-sm-12">
-        <img src="../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/><br>
+        <img src="../../../images/ajax-loader-bar.gif" alt="{{'in_progress'| translate}}"/><br>
         {{'loading_metadata'| translate}}
     </div>
     <div style="display:none" id="metadataLoadFailed" class="alert alert-danger">
