--- a/views/left-bar.html
+++ b/views/left-bar.html
@@ -10,7 +10,7 @@
     </ul>
 </div>
 <div style="margin-top:20px">
-    <img id="searchIcon" src="../images/search.png" style="cursor: pointer" title="{{searchOusLabel}}">
+    <img id="searchIcon" src="../../../images/search.png" style="cursor: pointer" title="{{searchOusLabel}}">
     <span id="searchSpan" style="width:100%;display:none;">
         <input type="text" id="searchField" name="key"/>
         <input type="button" value="{{findLabel}}" onclick="selection.findByName()"/>
